--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 env:
   AWS_REGION: us-east-1                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: demo123          # set this to your Amazon ECR repository name
-  ECS_SERVICE: xyz124              # set this to your Amazon ECS service name
+  ECS_SERVICE: xyzz12            # set this to your Amazon ECS service name
   ECS_CLUSTER: TESTING7                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: .github/workflows/task-definition.json      # set this to the path to your Amazon ECS task definition                                           # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: nodejs          # set this to the name of the container in the
