--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ on:
 env:
   AWS_REGION: us-east-1                  
   ECR_REPOSITORY: demo123         
-  ECS_SERVICE: xyzz12             
-  ECS_CLUSTER: TESTING7                 
+  ECS_SERVICE: eerrf             
+  ECS_CLUSTER: TESTING11                 
   ECS_TASK_DEFINITION: .github/workflows/task-definition.json                                           
 jobs:
   deploy:
