--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           ${{ runner.OS }}-node-
           ${{ runner.OS }}-
     - name: Install Dependencies
-      run: npm ci # if you are using npm and a package-lock.json
+      run: npm install # if you are using npm and a package-lock.json
     - name: Run Tests
       run: npm test # if you have a test script in your package.json
     - name: Build
