--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" ",
     "start": "node index.js",
-    "build":"node ."
+    "build":"echo \"no build steps"\"
   },
   "keywords": [],
   "author": "",
