--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,16 +41,16 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       run: |
-        docker build -t 445400024379.dkr.ecr.us-east-2.amazonaws.com/demo123:latest .
-        docker push 445400024379.dkr.ecr.us-east-2.amazonaws.com/demo123:latest
-        echo "::set-output name=image::445400024379.dkr.ecr.us-east-2.amazonaws.com/demo123:latest"
+        docker build -t 445400024379.dkr.ecr.us-east-2.amazonaws.com/${{vars.CONTAINER_NAME}}:latest .
+        docker push 445400024379.dkr.ecr.us-east-2.amazonaws.com/${{vars.CONTAINER_NAME}}:latest
+        echo "::set-output name=image::445400024379.dkr.ecr.us-east-2.amazonaws.com/${{vars.CONTAINER_NAME}}:latest"
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: ${{ env.ECS_TASK_DEFINITION }}
         container-name: ${{ env.CONTAINER_NAME }}
-        image: ${{ steps.build-image.outputs.image }}
+        image: 445400024379.dkr.ecr.us-east-2.amazonaws.com/${{vars.CONTAINER_NAME}}:latest
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
