--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: ${{ env.ECS_TASK_DEFINITION }}
+        task-definition: ${{ vars.ECS_TASK_DEFINITION }} 
         container-name: ${{ env.CONTAINER_NAME }}
         image: 445400024379.dkr.ecr.us-east-2.amazonaws.com/${{vars.ECR_REPOSITORY}}:latest"
     - name: Deploy Amazon ECS task definition
