--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
       run: |
         docker build -t 445400024379.dkr.ecr.us-east-2.amazonaws.com/demo123:latest .
         docker push 445400024379.dkr.ecr.us-east-2.amazonaws.com/demo123:latest
-        echo "::set-output name=image::445400024379.dkr.ecr.us-east-2.amazonaws.com/demo123:latest"
+        
 
 
     - name: Fill in the new image ID in the Amazon ECS task definition
@@ -55,7 +55,7 @@ jobs:
       with:
         task-definition: ${{ env.ECS_TASK_DEFINITION }}
         container-name: ${{ env.CONTAINER_NAME }}
-        image: ${{ steps.build-image.outputs.image }}
+        image: 445400024379.dkr.ecr.us-east-2.amazonaws.com/demo123:latest
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
