--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,16 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-2
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'   
+    - name: Install Dependencies
+      run: npm install # if you are using npm and a package-lock.json
+    - name: Run Tests
+      run: npm test # if you have a test script in your package.json
+    - name: Build
+      run: npm run build --if present
     - name: Login to Amazon ECR
       id: login-ecr
       run: |
