--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,4 +49,6 @@ jobs:
         task-definition: ${{ vars.ECS_TASK_DEFINITION }}
         service: ${{ env.ECS_SERVICE }}
         cluster: ${{ env.ECS_CLUSTER }}
-        
+        codedeploy-appspec: app-spec.json
+        codedeploy-application: just-testing1
+        codedeploy-deployment-group: just-testing-1-dg        
