--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,6 @@ env:
          # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
-permissions:
-  id-token: write
-  contents: read # This is required for actions/checkout@v2
 
 jobs:
   deploy:
@@ -63,4 +60,6 @@ jobs:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
         service: ${{ env.ECS_SERVICE }}
         cluster: ${{ env.ECS_CLUSTER }}
-        wait-for-service-stability: tru
+        codedeploy-appspec: app-spec.json
+        codedeploy-application: just-testing1
+        codedeploy-deployment-group: just-testing-1-dg 
