--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,4 +62,4 @@ jobs:
         cluster: ${{ env.ECS_CLUSTER }}
         codedeploy-appspec: app-spec.json
         codedeploy-application: just-testing1
-        codedeploy-deployment-group: just-testing-1-dg 
+        codedeploy-deployment-group: just-testin-1-dg 
