--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,15 +6,15 @@ on:
       - "main"
   workflow_dispatch:
 env:
-  AWS_REGION: us-east-1                  # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: demo123          # set this to your Amazon ECR repository name
-  ECS_SERVICE: blu-green            # set this to your Amazon ECS service name
-  ECS_CLUSTER: TESTING11                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: .github/workflows/task-definition.json      # set this to the path to your Amazon ECS task definition                                           # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: nodejs          # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
-         # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
+  AWS_REGION: us-east-1                 
+  ECR_REPOSITORY:  ${{ vars.ECR_REPOSITORY }}        
+  ECS_SERVICE:  ${{ vars.ECS_SERVICE }}           
+  ECS_CLUSTER: ${{ vars.ECS_CLUSTER }}                  
+  ECS_TASK_DEFINITION: ${{ vars.ECS_TASK_DEFINITION }} 
+  CONTAINER_NAME: ${{ vars.CONTAINER_NAME }} 
+  CODEDEPLOY_APPSPEC: ${{vars.appspec}}
+  CODEDEPLOY_APPLICATION: ${{vars.codedeployapplication}}
+  CODEDEPLOY_DG: ${{vars.deploymentgroup}}        
 
 
 jobs:
