--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - "main"
   workflow_dispatch:
 env:
-  AWS_REGION: us-east-1                  # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: us-west-1                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: demo123          # set this to your Amazon ECR repository name
   ECS_SERVICE: blu-green            # set this to your Amazon ECS service name
   ECS_CLUSTER: TESTING11                 # set this to your Amazon ECS cluster name
