--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,8 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ${{ vars.ECS_SERVICE }}
-        cluster: ${{ vars.ECS_CLUSTER }} 
+        service: blu-green
+        cluster: TESTING11
         codedeploy-appspec: ${{env.CODEDEPLOY_APPSPEC}}
         codedeploy-application: ${{env.CODEDEPLOY_APPLICATION}}
         codedeploy-deployment-group: ${{env.CODEDEPLOY_DG}}     
