--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,6 @@ jobs:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
         service: ${{ vars.ECS_SERVICE }}
         cluster: ${{ vars.ECS_CLUSTER }}
-        codedeploy-appspec: appspec.json
-        codedeploy-application: just-testing1
-        codedeploy-deployment-group: green
+        codedeploy-appspec: ${{vars.APPSPEC}}
+        codedeploy-application: ${{vars.CODEDEPLOY_APPLICATION}}
+        codedeploy-deployment-group: ${{vars.CODEDEPLOY_DG}}
