--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,15 +25,15 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       run: |
-        docker build -t 445400024379.dkr.ecr.us-east-2.amazonaws.com/${{ env.ECR_REPOSITORY}}:latest .
-        docker push 445400024379.dkr.ecr.us-east-2.amazonaws.com/${{ env.ECR_REPOSITORY}}:latest
+        docker build -t 445400024379.dkr.ecr.us-east-2.amazonaws.com/${{ vars.ECR_REPOSITORY}}:latest .
+        docker push 445400024379.dkr.ecr.us-east-2.amazonaws.com/${{ vars.ECR_REPOSITORY}}:latest
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: ${{ vars.ECS_TASK_DEFINITION }}
         container-name: ${{ vars.CONTAINER_NAME }}
-        image: 445400024379.dkr.ecr.us-east-2.amazonaws.com/${{ env.ECR_REPOSITORY}}:latest 
+        image: 445400024379.dkr.ecr.us-east-2.amazonaws.com/${{vars.ECR_REPOSITORY}}:latest 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
