--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,5 @@
 # .github/workflows/nodejs.yml
-
 name: Node.js CI/CD
-
 on:
   push:
     branches:
@@ -9,9 +7,7 @@ on:
   workflow_dispatch:
 jobs:
   build-and-deploy:
-
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -23,21 +19,25 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+    - name: Build and test
+      run: |
+        npm build --if present
+        npm test --if present
+    - name: Create EFS Filesystem
+      run: |
+        export FILE_SYSTEM_ID=$(aws efs create-file-system --creation-token $(date +%s) --region ${{ secrets.AWS_REGION }} --query 'FileSystemId' --output text)
+        echo "FILE_SYSTEM_ID=$FILE_SYSTEM_ID" >> $GITHUB_ENV
+        aws efs create-mount-target --file-system-id $FILE_SYSTEM_ID --subnet-id ${{ secrets.SUBNET_ID }} --region ${{ secrets.AWS_REGION }}
+    - name: Upload code to S3
+      run: |
+        tar -zcvf code.tar.gz .
+        aws s3 cp code.tar.gz s3://${{ secrets.S3_BUCKET }}/code.tar.gz
+    - name: Setup SSH
+      uses: webfactory/ssh-agent@v0.4.1
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+    - name: Mount EFS and Copy code from S3 to EFS
+      run: |
+        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_IP }} "sudo mkdir -p /mnt/efs && sudo mount -t efs ${FILE_SYSTEM_ID}:/ /mnt/efs && aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz /mnt/efs/code.tar.gz && tar -zxvf /mnt/efs/code.tar.gz -C /mnt/efs"
 
   
-   
-    - name: Deploy to EC2
-      env:
-        PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-        HOST: ${{ secrets.EC2_HOST }}
-        USER: ${{ secrets.EC2_USER }}
-        TEMP_DIR: /tmp/artifacts/
-        TARGET_DIR: /var/app/
-      run: |
-        echo "$PRIVATE_KEY" > private_key.pem
-        chmod 600 private_key.pem
-        rsync -avz -e "ssh -i private_key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" --exclude 'node_modules' --exclude '.git*' --exclude 'private_key.pem' . $USER@$HOST:$TEMP_DIR   
-        ssh -i private_key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $USER@$HOST "sudo chown -R $USER:$USER $TARGET_DIR && sudo chmod -R 755 $TARGET_DIR"
-        ssh -i private_key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $USER@$HOST "sudo mv $TEMP_DIR/* $TARGET_DIR"
-        ssh -i private_key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $USER@$HOST "cd $TARGET_DIR && npm install && pm2 restart index.js --name application-test -f"
-        rm -f private_key.pem
