--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"echo\"no build specified\""
-    "test": "echo \" no test specified\" "
+    "build": "echo \"no build specified\"",
+    "test": "echo \"no test specified\""
   },
   "keywords": [],
   "author": "",
