--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
       run: npm install
     - name: Build and test
       run: |
-        npm build --if present
-        npm test --if present
+        npm build --if-present
+        npm test --if-present
     - name: Create EFS Filesystem
       run: |
         export FILE_SYSTEM_ID=$(aws efs create-file-system --creation-token $(date +%s) --region ${{ secrets.AWS_REGION }} --query 'FileSystemId' --output text)
