--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,6 @@ jobs:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
     - name: Mount EFS and Copy code from S3 to EFS
       run: |
-        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_IP }} "sudo mkdir -p /mnt/efs && sudo mount -t efs ${FILE_SYSTEM_ID}:/ /mnt/efs && aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz /mnt/efs/code.tar.gz && tar -zxvf /mnt/efs/code.tar.gz -C /mnt/efs"
+        ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} "sudo mkdir -p /mnt/efs && sudo mount -t efs ${FILE_SYSTEM_ID}:/ /mnt/efs && aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz /mnt/efs/code.tar.gz && tar -zxvf /mnt/efs/code.tar.gz -C /mnt/efs"
 
   
