--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# .github/workflows/nodejs.yml
 name: Node.js CI/CD
 on:
   push:
@@ -27,18 +26,24 @@ jobs:
       run: npm install
     - name: Build and test
       run: |
-        npm build --if-present
-        npm test --if-present
+        npm run build --if-present
+        npm run test --if-present
     - name: Create EFS Filesystem
+      id: create-efs
       run: |
         export FILE_SYSTEM_ID=$(aws efs create-file-system --creation-token $(date +%s) --region ${{ secrets.AWS_REGION }} --query 'FileSystemId' --output text)
         echo "FILE_SYSTEM_ID=$FILE_SYSTEM_ID" >> $GITHUB_ENV
         while [[ $(aws efs describe-file-systems --file-system-id $FILE_SYSTEM_ID --query 'FileSystems[0].LifeCycleState' --output text) != "available" ]]; do
-        echo "Waiting for EFS filesystem to become available..."
-        sleep 10
+          echo "Waiting for EFS filesystem to become available..."
+          sleep 10
         done
         aws efs create-mount-target --file-system-id $FILE_SYSTEM_ID --subnet-id ${{ secrets.SUBNET_ID }} --region ${{ secrets.AWS_REGION }}
- 
+    - name: Check DNS resolution
+      run: |
+        while ! nslookup ${FILE_SYSTEM_ID}.efs.${{ secrets.AWS_REGION }}.amazonaws.com; do
+          echo "Waiting for DNS resolution of EFS filesystem..."
+          sleep 10
+        done
     - name: Upload code to S3
       run: |
         tar -zcvf code.tar.gz --exclude='./.git' *
@@ -47,8 +52,8 @@ jobs:
       uses: webfactory/ssh-agent@v0.4.1
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-    - name: Execute remote ssh commands
+    - name: Execute remote SSH commands
       run: |
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key.pem
         chmod 600 private_key.pem
-        ssh -i private_key.pem -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} "sudo apt-get -y update && sudo apt-get -y install nfs-common && sudo mkdir -p /mnt/efs && sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 ${FILE_SYSTEM_ID}.efs.us-east-2.amazonaws.com:/ /mnt/efs && aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz /mnt/efs/code.tar.gz && tar -zxvf /mnt/efs/code.tar.gz -C /mnt/efs"
+        ssh -i private_key.pem -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} "sudo apt-get -y update && sudo apt-get -y install nfs-common && sudo mkdir -p /mnt/efs && sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 ${FILE_SYSTEM_ID}.efs.${{ secrets.AWS_REGION }}.amazonaws.com:/ /mnt/efs && aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz /mnt/efs/code.tar.gz && tar -zxvf /mnt/efs/code.tar.gz -C /mnt/efs"
