--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,7 @@ jobs:
         export PRIVATE_IP=\$PRIVATE_IP; \
         export AWS_ACCESS_KEY_ID=\$AWS_ACCESS_KEY_ID; \
         export AWS_SECRET_ACCESS_KEY=\$AWS_SECRET_ACCESS_KEY; \
+        echo \"sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 $PRIVATE_IP:/ /mnt/efs\";
         sudo mkdir -p /mnt/efs && \
         for i in {1..5}; do sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs && break || sleep 15; done && \
         aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz /mnt/efs/code.tar.gz && \
