--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,17 +52,16 @@ jobs:
     - name: Setup SSH
       uses: webfactory/ssh-agent@v0.4.1
       with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-    
+         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
     - name: Execute remote SSH commands
       run: |
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key.pem
-        chmod 600 private_key.pem
-        echo \"sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 $PRIVATE_IP:/ /mnt/efs\";
-        ssh -i private_key.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ubuntu@ 18.117.252.235 "\
-        export PRIVATE_IP=\$PRIVATE_IP; \
-        export AWS_ACCESS_KEY_ID=\$AWS_ACCESS_KEY_ID; \
-        export AWS_SECRET_ACCESS_KEY=\$AWS_SECRET_ACCESS_KEY; \
+        echo "Trying to connect to the server..."
+        ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ubuntu@18.117.252.235 "\
+        export PRIVATE_IP=${{ env.PRIVATE_IP }}; \
+        export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}; \
+        export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}; \
+        echo 'Mount command: '; echo \"sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs\"; \
         sudo mkdir -p /mnt/efs && \
         for i in {1..5}; do sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs && break || sleep 15; done && \
         aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz /mnt/efs/code.tar.gz && \
