--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,12 +57,13 @@ jobs:
     - name: Execute remote SSH commands
       run: |
         echo "Trying to connect to the server..."
-        ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ubuntu@18.117.252.235 "echo 'Setting up environment variables' && \
-        export PRIVATE_IP=${{ env.PRIVATE_IP }} && echo 'PRIVATE_IP set to ' \$PRIVATE_IP && \
-        export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} && echo 'AWS_ACCESS_KEY_ID set' && \
-        export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} && echo 'AWS_SECRET_ACCESS_KEY set' && \
-        echo 'Mount command: '; echo \"sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs\" && \
-        sudo mkdir -p /mnt/efs && \
-        for i in {1..5}; do sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs && break || sleep 15; done && \
-        aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz /mnt/efs/code.tar.gz && \
+        ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ubuntu@18.117.252.235 "\
+        echo 'Setting up environment variables'; \
+        export PRIVATE_IP=${{ env.PRIVATE_IP }}; echo 'PRIVATE_IP set to ' \$PRIVATE_IP; \
+        export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}; echo 'AWS_ACCESS_KEY_ID set'; \
+        export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}; echo 'AWS_SECRET_ACCESS_KEY set'; \
+        echo 'Mount command: '; echo \"sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs\"; \
+        sudo mkdir -p /mnt/efs; \
+        for i in {1..5}; do sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs && break || sleep 15; done; \
+        aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz /mnt/efs/code.tar.gz; \
         sudo tar -zxvf /mnt/efs/code.tar.gz -C /mnt/efs"
