--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,8 @@ jobs:
         echo "Trying to connect to the server..."
         ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ubuntu@18.117.252.235 "\
         echo 'Setting up environment variables'; \
-        export PRIVATE_IP=${{ env.PRIVATE_IP }}; echo 'PRIVATE_IP set to ' \$PRIVATE_IP; \
+        export PRIVATE_IP=${{ env.PRIVATE_IP }}; \
+        echo 'PRIVATE_IP set to ' \$PRIVATE_IP; \
         export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}; echo 'AWS_ACCESS_KEY_ID set'; \
         export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}; echo 'AWS_SECRET_ACCESS_KEY set'; \
         echo 'Mount command: '; echo \"sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs\"; \
