--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,6 @@ jobs:
         echo 'AWS_SECRET_ACCESS_KEY set' && \
         sudo mkdir -p /mnt/efs && \
         sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs && \
-        aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz /mnt/efs/code.tar.gz && \
+        sudo aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz /mnt/efs/code.tar.gz && \
         sudo tar -zxvf /mnt/efs/code.tar.gz -C /mnt/efs"
 
