--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,16 +49,19 @@ jobs:
       run: |
         tar -zcvf code.tar.gz --exclude='./.git' *
         aws s3 cp code.tar.gz s3://${{ secrets.S3_BUCKET }}/code.tar.gz
+    - name: Download code from S3
+      run: |
+        aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz code.tar.gz
     - name: Setup SSH
       uses: webfactory/ssh-agent@v0.4.1
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
+    - name: Sync code to target machine
+      run: |
+        rsync -e "ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" -avz code.tar.gz ubuntu@18.117.252.235:/mnt/efs/
     - name: Execute remote SSH commands
       run: |
         ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ubuntu@18.117.252.235 "export PRIVATE_IP=${{ env.PRIVATE_IP }} && \
         sudo mkdir -p /mnt/efs && \
         sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs && \
-        sudo aws s3 cp s3://${{ secrets.S3_BUCKET }}/code.tar.gz /mnt/efs/code.tar.gz && \
         sudo tar -zxvf /mnt/efs/code.tar.gz -C /mnt/efs"
-
