--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,4 +64,4 @@ jobs:
         ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ubuntu@18.117.252.235 "export PRIVATE_IP=${{ env.PRIVATE_IP }} && \
         sudo mkdir -p /mnt/efs && \
         sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs && \
-        sudo tar -zxvf /mnt/efs/code.tar.gz -C /mnt/efs"
+        sudo tar -zxvf /mnt/efs/code.tar.gz -C /mnt/efs
