--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,5 +64,6 @@ jobs:
         ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ubuntu@18.117.252.235 "export PRIVATE_IP=${{ env.PRIVATE_IP }} && \
         sudo chmod 777 /mnt/efs && \
         sudo mv /tmp/code.tar.gz /mnt/efs/ && \
+        sudo ls -ld /mnt/efs && \
         sudo mount -t nfs -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 \$PRIVATE_IP:/ /mnt/efs && \
         sudo tar -zxvf /mnt/efs/code.tar.gz -C /mnt/efs"
